# aws_local_testing_sfn

./: .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-definition.json
app/: main.py
bootstrap/: localstack_bootstrap.py  wait-for-queue.py  wait-for-service.py
tests/: poll_queue.py  test_aws_pipeline.py
tests/responses/: schedule_d_7_b_1.json
