[tool.poetry]
name = "local-sfn"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.108"
botocore = "^1.34.108"
pytest = "^8.2.1"
deepdiff = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
